Closed Bug 845712 Opened 11 years ago Closed 11 years ago

Fix some warnings in SIPCC Darwin code

Categories

(Core :: WebRTC: Signaling, defect, P3)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla22
Tracking Status
firefox21 --- wontfix
firefox22 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

Details

(Whiteboard: [qa-])

Attachments

(2 files)

      No description provided.
Attachment #718859 - Flags: review?(rjesup)
threadPtr->name will be uninitialized if cprCreateThread()'s optional name parameter is NULL.
Attachment #718860 - Flags: review?(rjesup)
The first patch (remove-pointer-casts.patch) fixes the following clang warning:

media/webrtc/signaling/src/sipcc/cpr/darwin/cpr_darwin_threads.c:117:18 [-Wint-conversion] incompatible integer to pointer conversion passing 'uint64_t' (aka 'unsigned long long') to parameter of type 'pthread_t' (aka 'struct _opaque_pthread_t *')

The other casts can be removed because C always void and non-void pointers to be used together without casts, unlike C++.
Attachment #718859 - Flags: review?(rjesup) → review+
Attachment #718860 - Flags: review?(rjesup) → review+
https://hg.mozilla.org/mozilla-central/rev/848ea76791dd
https://hg.mozilla.org/mozilla-central/rev/5d7eb9cfdaa8
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: