Bug 845712 - threadPtr->name will be uninitialized if cprCreateThread()'s name parameter is NULL. r=jesup